--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">GastoViagem</string>
+
+    <string name="distance">Distância</string>
+    <string name="total_Km">Total de quilômetros</string>
+
+    <string name="price">Preço</string>
+    <string name="price_Per_Liter">Preço por litro</string>
+
+    <string name="autonomy">Autonomia</string>
+    <string name="km_Per_Liter">KMs por litro</string>
+
+    <string name="msg_total_spend">seu gasto total será de:</string>
+    <string name="total_spend">R$ 0</string>
+    <string name="calculate">calcular</string>
+
 </resources>
