implementa funçao de validaçao dos campos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="msg_total_spend">seu gasto total será de:</string>
     <string name="total_spend">R$ 0</string>
     <string name="calculate">calcular</string>
+    <string name="Validation_fill_all_fields">Preencha todos os campos</string>
 
 </resources>
